[package]
name = "quantum_world_state"
version = "0.1.0"
authors = ["Luke Peterson <luke@infoplatter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maybe-owned = "*"
maplit = "*"
smallvec = "*"
derive_more = "*"
im = "*"

